@@ -11,6 +11,8 @@ PHP 4                                                                      NEWS
   reference). (Ilia)
 - Fixed bug #26753 (zend_fetch_list_dtor_id() doesn't check NULL strings).
   (Jani, Markus dot Lidel at shadowconnect dot com)
+- Fixed bug #26005 (Random "cannot change the session ini settings" errors).
+  (Jani, jsnajdr at kerio dot com)
 
 16 Feb 2004, Version 4.3.5RC3
 - Fixed zero bytes memory allocation when no extra ini files are found in the
